--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <!-- Facebook Opengraph Metadata -->
+    <meta property="og:title" content="Hafidh Fikri Rasyid (mechajunkers)">
+    <meta property="og:site_name" content="Hafidh Fikri Rasyid (mechajunkers)">
+    <meta property="og:url" content="https://mechajunkers.github.io/">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:image" content="YOUR_IMAGE_URL_HERE">
+    <meta property="fb:app_id" content="YOUR_APP_ID_HERE">
+
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
